fixes bug with number_employess in linkedin beacon regex, and a bug with menu cut off the top of window

--- a/app/static/main.css
+++ b/app/static/main.css
@@ -106,3 +106,8 @@
     flex-direction: column;
     font-weight: bold;
 }
+
+.tabulator-menu {
+    max-height: 20vh;
+    bottom:unset !important;
+}
